--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ firebase-debug.*.log*
 
 # Firebase config
 
+data/*
+
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
 # it commented so all members can deploy to the same project(s) in .firebaserc.
@@ -67,3 +69,7 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+
+#pycharm related
+.idea
+.idea/*
