--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,13 @@
 {
   "hosting": {
+    "site": "foresttrailshoa-2fc5b",
     "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
